# docs/swagger.json
@@ -84,12 +84,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "{\"message\": \"products deleted successfully\"}",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "type": "string"
                         }
                     }
                 }
@@ -115,24 +112,15 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "array",
-                                "items": {
-                                    "$ref": "#/definitions/Product"
-                                }
-                            }
+                            "$ref": "#/definitions/dao.ProductsList"
                         }
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "{\"message\": \"Product created Successfully\"}",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/Product"
-                            }
+                            "type": "string"
                         }
                     }
                 }
@@ -197,18 +185,15 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "$ref": "#/definitions/UpdateProduct"
-                            }
+                            "$ref": "#/definitions/UpdateProduct"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "{\"message\": \"product with id ${id} updated successfully\"}",
                         "schema": {
-                            "$ref": "#/definitions/UpdateProduct"
+                            "type": "string"
                         }
                     }
                 }
@@ -306,6 +291,20 @@
                 },
                 "stock": {
                     "type": "integer"
+                }
+            }
+        },
+        "dao.ProductsList": {
+            "type": "object",
+            "required": [
+                "products"
+            ],
+            "properties": {
+                "products": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/Product"
+                    }
                 }
             }
         }
